src/test/ui/resolve/resolve-self-in-impl.stderr
error: `Self` is not allowed in the self type of an `impl` block
  --> $DIR/resolve-self-in-impl.rs:14:13
   |
LL | impl Tr for Self {}
   |             ^^^^
   |
   = note: referencing `Self` in this position would produce an infinitely recursive type

error: `Self` is not allowed in the self type of an `impl` block
  --> $DIR/resolve-self-in-impl.rs:16:15
   |
LL | impl Tr for S<Self> {}
   |               ^^^^
   |
   = note: referencing `Self` in this position would produce an infinitely recursive type

error: `Self` is not allowed in the self type of an `impl` block
  --> $DIR/resolve-self-in-impl.rs:18:6
   |
LL | impl Self {}
   |      ^^^^
   |
   = note: referencing `Self` in this position would produce an infinitely recursive type

error: `Self` is not allowed in the self type of an `impl` block
  --> $DIR/resolve-self-in-impl.rs:20:8
   |
LL | impl S<Self> {}
   |        ^^^^
   |
   = note: referencing `Self` in this position would produce an infinitely recursive type

error[E0223]: ambiguous associated type
  --> $DIR/resolve-self-in-impl.rs:22:9
   |
LL | impl Tr<Self::A> for S {}
   |         ^^^^^^^ help: use fully-qualified syntax: `<S as Trait>::A`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0223`.
